Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20215

binlog.show_concurrent_rotate failed in buildbot with wrong result

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos74-amd64-debug/builds/2379

      10.4 1c27eb7ebd2c95008ba9b4fdfdee4061

      binlog.show_concurrent_rotate 'row'      w1 [ fail ]
              Test ended at 2019-07-29 11:46:47
       
      CURRENT_TEST: binlog.show_concurrent_rotate
      --- /usr/share/mysql-test/suite/binlog/r/show_concurrent_rotate.result	2019-07-29 09:56:59.000000000 +0000
      +++ /dev/shm/var/1/log/show_concurrent_rotate.reject	2019-07-29 11:46:47.623678871 +0000
      @@ -12,5 +12,4 @@
       # The correct result must consists of two records
       Log_name	File_size
       master-bin.000001	#
      -master-bin.000002	#
       SET debug_sync = 'reset';
       
      mysqltest: Result length mismatch
      

      Attachments

        Activity

          People

            bnestere Brandon Nesterenko
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3d 4.25h
                3d 4.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.