sql/sql_reload.cc
@@ -150,6 +150,9 @@ bool reload_acl_and_cache(THD *thd, unsigned long long options,
       DYNAMIC_ARRAY *drop_gtid_domain=
         (thd && (thd->lex->delete_gtid_domain.elements > 0)) ?
         &thd->lex->delete_gtid_domain : NULL;
+
+      DEBUG_SYNC(thd, "at_flush_pre_rotate_and_purge");
+
       if (mysql_bin_log.rotate_and_purge(true, drop_gtid_domain))
         *write_to_binlog= -1;
 
